fix nav bar styling (remove a div that prevented spacing in nav elements)

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -1,7 +1,6 @@
 .main_body {
   background-image: url("https://image.freepik.com/free-photo/close-up-white-marble-texture-background_53876-63512.jpg");
   margin: 0;
-  text-align: center;
 }
 
 .main_header {
